--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
       <link rel="stylesheet" href="./css/style.css">
+
+      <link rel="icon" type="image/png" sizes="32x32" href="./Images/favicon.ico">
     <title>Google Home Page|| Clone</title>
   </head>
 
@@ -27,18 +29,21 @@
       </nav>
       <div class="hero">
           <div class="hero_img">
-              <img src="./git_test/Images/googlelogo.png" alt="">
+              <img src="./Images/googlelogo.png" alt="Google logo">
           </div>
       </div>
       <div class="form">
-          <i class="material-icons">search</i>
+         <div class="form_input">
+          <form action="">
+            <i class="material-icons">search</i>
           <input type="text">
           <i class="material-icons">mic</i>
-
+        </form>
           <div class="btn">
             <button>Google Search</button>
             <button>I'm Felling Lucky</button>
           </div>
+         </div>
       </div>
       <div class="mid_section">
           <span>Google Also offered In:</span>
@@ -51,23 +56,25 @@
       <footer>
           <span>Nigeria</span>
           <hr>
+         <div class="footer">
           <div class="footer_links">
-              <a href="">About</a>
-              <a href="">Advertisment</a>
-              <a href="">Business</a>
-              <a href="">How Search Works</a>
-          </div>
-          <div class="footer_links">
-              <a href="">
-                <img src="./git_test/Images/green.png" alt="carbon_neutral">
-                <span>Carbon neutral since 2007</span>
-              </a>
-          </div>
-          <div class="footer_links">
-              <a href="">Privacy</a>
-              <a href="">Terms</a>
-              <a href="">Settings</a>
-          </div>
+            <a href="">About</a>
+            <a href="">Advertisment</a>
+            <a href="">Business</a>
+            <a href="">How Search Works</a>
+        </div>
+        <div class="footer_links">
+            <a href="">
+              <img src="./Images/green.png" alt="carbon_neutral">
+              <span>Carbon neutral since 2007</span>
+            </a>
+        </div>
+        <div class="footer_links">
+            <a href="">Privacy</a>
+            <a href="">Terms</a>
+            <a href="">Settings</a>
+        </div>
+         </div>
       </footer>
     </div>
   </body>
